<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    tools:context="info.fshi.crowdparking.ParkingLotListActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="right"
                android:labelFor="@+id/username"
                android:padding="3dip"
                android:text="@string/login_username"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="3dip" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="right"
                android:labelFor="@+id/password"
                android:padding="3dip"
                android:text="@string/login_password"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="3dip" >
            </EditText>
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="4dip"
        android:background="?android:attr/dividerHorizontal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="3dip"
        android:text="@string/action_identity"
        android:textStyle="bold" >
    </TextView>

    <Button
        android:id="@+id/login_button_driver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/login_driver"
        android:textColor="#000000" />

    <Button
        android:id="@+id/login_button_sourcer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/login_sourcer"
        android:textColor="#000000" />

</LinearLayout>