<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:labelFor="@+id/editParkingLotName"
                    android:padding="3dip"
                    android:text="@string/report_parking_lot_name"
                    android:textStyle="bold" >
                </TextView>

                <EditText
                    android:id="@+id/editParkingLotName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="3dip" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:labelFor="@+id/editParkingLotDesc"
                    android:padding="3dip"
                    android:text="@string/report_parking_lot_desc"
                    android:textStyle="bold" >
                </TextView>

                <EditText
                    android:id="@+id/editParkingLotDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="3dip" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:labelFor="@+id/editParkingLotBid"
                    android:padding="3dip"
                    android:text="@string/report_parking_lot_bid"
                    android:textStyle="bold" >
                </TextView>

                <EditText
                    android:id="@+id/editParkingLotBid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:padding="3dip" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:labelFor="@+id/editParkingLotPrice"
                    android:padding="3dip"
                    android:text="@string/report_parking_lot_price"
                    android:textStyle="bold" >
                </TextView>

                <EditText
                    android:id="@+id/editParkingLotPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:padding="3dip" >
                </EditText>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_box_instruction" />

        <ListView
            android:id="@+id/question_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dip" >
        </ListView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerHorizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/report_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/report_parking_lot"
                android:textColor="#000000" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/action_cancel"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>