<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.fshi.crowdparking.ReportParkingLotActivity" >

    <ScrollView
        android:id="@+id/reportform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:labelFor="@+id/editParkingLotName"
                    android:padding="3dip"
                    android:text="@string/report_parking_lot_name"
                    android:textStyle="bold" >
                </TextView>

                <EditText
                    android:id="@+id/editParkingLotName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="3dip" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:labelFor="@+id/editParkingLotDesc"
                    android:padding="3dip"
                    android:text="@string/report_parking_lot_desc"
                    android:textStyle="bold" >
                </TextView>

                <EditText
                    android:id="@+id/editParkingLotDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="3dip" >
                </EditText>
            </TableRow>
            
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:labelFor="@+id/editParkingLotBid"
                    android:padding="3dip"
                    android:text="@string/report_parking_lot_bid"
                    android:textStyle="bold" >
                </TextView>

                <EditText
                    android:id="@+id/editParkingLotBid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:padding="3dip" >
                </EditText>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/reportButtonBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reportform" >

        <Button
            android:id="@+id/reportbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_parking_lot" >
        </Button>
    </RelativeLayout>

</RelativeLayout>